fixed row of illustrations alignment/display msg if none created.

--- a/public/stylesheets/exhibits_elements.css
+++ b/public/stylesheets/exhibits_elements.css
@@ -180,3 +180,8 @@ h3 {
 	padding:5px;
 }
 
+.row_of_illustration_msg {
+	font-size: 1.5em;
+	color: gray;
+	font-style: italic;
+}
